--- a/src/components/Toolbar/Toolbar.sass
+++ b/src/components/Toolbar/Toolbar.sass
@@ -9,9 +9,3 @@
     flex-direction: row
     justify-content: space-between
     align-items: center
-
-  & .button
-    margin-left: 10px
-
-    &:last-child
-      margin-left: 0
